<resources>
    <string name="app_name">HREHERCH-HabitTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_view_statistics">ViewStatisticsActivity</string>
    <string name="title_activity_view_history">ViewHistoryActivity</string>

    <string name="short_sunday">S</string>
    <string name="short_monday">M</string>
    <string name="short_tuesday">T</string>
    <string name="short_wednesday">W</string>
    <string name="short_thursday">T</string>
    <string name="short_friday">F</string>
    <string name="short_saturday">S</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="action_deleteHabit">Delete Habit</string>
    <string name="action_editName">Edit Habit Name</string>
    <string name="action_resetHabit">Reset Habit</string>
    <string name="menu_textTitle_resetHabitTracker">Reset Habit Tracker</string>
    <string name="menu_text_resetAllData">Reset All Data</string>
</resources>
