<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/colorPrimary">

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/imageButton_addCompletionButton"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_rowSpan="2"
        android:src="@drawable/ic_snooze_black"
        android:tint="@color/black"
        android:background="@color/colorInactive"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="HABIT NAME HERE"
        android:id="@+id/textView_habitName"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="5dp"
        android:text="x##"
        android:id="@+id/textView_numCompletions"
        android:layout_row="1"
        android:layout_column="1" />

    <LinearLayout
        android:id="@+id/linearLayout_dotw"
        android:orientation="horizontal"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="7" >

        <TextView
            android:id="@+id/textView_sun"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorInactive"
            android:text="@string/short_sunday"/>

        <TextView
            android:id="@+id/textView_mon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorInactive"
            android:text="@string/short_monday"/>

        <TextView
            android:id="@+id/textView_tue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginEnd="-5dp"
            android:textColor="@color/colorInactive"
            android:text="@string/short_tuesday"/>

        <TextView
            android:id="@+id/textView_wed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorInactive"
            android:text="@string/short_wednesday"/>

        <TextView
            android:id="@+id/textView_thu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorInactive"
            android:text="@string/short_thursday"/>

        <TextView
            android:id="@+id/textView_fri"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorInactive"
            android:text="@string/short_friday"/>

        <TextView
            android:id="@+id/textView_sat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorInactive"
            android:text="@string/short_saturday"/>


    </LinearLayout>

</GridLayout>
